force-app/main/default/objects/Salary_Advance_Request__c/Salary_Advance_Request__c.object-meta.xml
<CustomObject>
    <label>Salary Advance Request</label>
    <nameField>
        <displayFormat>SAR - {000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salary Advance Request</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>