force-app/main/default/objects/Salary_Advance_Request__c/fields/AdvanceAmount__c.field-meta.xml
<CustomField>
    <fullName>AdvanceAmount__c</fullName>
    <label>Advance Amount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>