force-app/main/default/objects/Salary_Advance_Request__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.OwnerId</field>
            <operation>equals</operation>
            <valueField>Employee__c.OwnerId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Salary Advance Request</relationshipLabel>
    <relationshipName>Salary_Advance_Request</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>