force-app/main/default/objects/Salary_Advance_Request__c/fields/Payslip__c.field-meta.xml
<CustomField>
    <fullName>Payslip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payslip</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Employee__c</field>
            <operation>equals</operation>
            <valueField>Payslip__c.Employee__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Payslip__c</referenceTo>
    <relationshipLabel>Salary Advance Request</relationshipLabel>
    <relationshipName>Salary_Advance_Request</relationshipName>
    <type>Lookup</type>
</CustomField>