force-app/main/default/objects/Salary_Advance_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Sent to BOD</fullName>
            </value>
            <value>
                <fullName>BOD Approved</fullName>
            </value>
            <value>
                <fullName>BOD Rejected</fullName>
            </value>
            <value>
                <fullName>Accountant Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>