force-app/main/default/objects/Salary_Advance_Request__c/validationRules/Advance_Amount_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Advance_Amount_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AdvanceAmount__c /  (Employee__r.Salarypolicy__r.Basicsalary__c +  Employee__r.Salarypolicy__r.Productivitysalary__c ) &gt; 0.3</errorConditionFormula>
    <errorMessage>Advance Salary cannot exceed 30% Basic Salary!</errorMessage>
</ValidationRule>