force-app/main/default/objects/Salary_Advance_Request__c/validationRules/Advance_Day_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Advance_Day_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
 day(Today()) &lt;&gt; 15,
 day(Today())  &lt;&gt; 16,
 day(Today()) &lt;&gt; 17)</errorConditionFormula>
    <errorMessage>Salary Advance Request can ONLY create on day 15th, 16th or 17th of the month!</errorMessage>
</ValidationRule>