force-app/main/default/objects/Salary_Advance_Request__c/listViews/TCL_Accountant_Salary_Advance_Request.listView-meta.xml
<ListView>
    <fullName>TCL_Accountant_Salary_Advance_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>TCL - Accountant</label>
    <queue>TCL_Accountant</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>