force-app/main/default/objects/Salary_Advance_Request__c/listViews/TCL_BOD_Salary_Advance_Request.listView-meta.xml
<ListView>
    <fullName>TCL_BOD_Salary_Advance_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>TCL - BOD for Employee, Trave and Salary</label>
    <queue>TCL_BOD</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>